--- a/midterm_project/pull_data.ipynb
+++ b/midterm_project/pull_data.ipynb
@@ -13,12 +13,431 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# using the sportsipy module\n",
-    "from sportsipy.nhl.teams import Teams\n"
+    "import pandas as pd\n",
+    "import functools\n",
+    "# doing it the old fashion way\n",
+    "\n",
+    "def scrape_player_data(year):\n",
+    "    link = f\"https://www.hockey-reference.com/leagues/NHL_%s_skaters.html#stats\" % year\n",
+    "    data = pd.read_html(link)[0]\n",
+    "    data.columns = [\n",
+    "        \"rank\", \"player_name\", \"age\", \"team\", \"position\", \"games_played\", \"goals\",\n",
+    "        \"assists\", \"points\", \"plus_minus\", \"penalties_in_minutes\", \"point_shares\",\n",
+    "        \"even_strength_goals\", \"powerplay_goals\", \"shorthanded_goals\", \"game_winning_goals\",\n",
+    "        \"even_strength_assists\", \"powerplay_assists\", \"shorthanded_assists\", \"shots\",\n",
+    "        \"shooting_pct\", \"time_on_ice_min\", \"average_time_on_ice\", \"blocks\", \n",
+    "        \"hits\", \"faceoff_wins\", \"faceoff_losses\", \"faceoff_win_pct\"\n",
+    "    ]\n",
+    "    last_year = year-1\n",
+    "    data[\"season\"] = f'%s/%s' % (last_year, year)\n",
+    "    return(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_list = [scrape_player_data(year) for year in range(2010, 2020)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_df = functools.reduce(lambda left, right: pd.concat([left, right], axis = 0, ignore_index=True),\n",
+    "                player_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rank</th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>team</th>\n",
+       "      <th>position</th>\n",
+       "      <th>games_played</th>\n",
+       "      <th>goals</th>\n",
+       "      <th>assists</th>\n",
+       "      <th>points</th>\n",
+       "      <th>plus_minus</th>\n",
+       "      <th>...</th>\n",
+       "      <th>shots</th>\n",
+       "      <th>shooting_pct</th>\n",
+       "      <th>time_on_ice_min</th>\n",
+       "      <th>average_time_on_ice</th>\n",
+       "      <th>blocks</th>\n",
+       "      <th>hits</th>\n",
+       "      <th>faceoff_wins</th>\n",
+       "      <th>faceoff_losses</th>\n",
+       "      <th>faceoff_win_pct</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Justin Abdelkader</td>\n",
+       "      <td>22</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>LW</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>530</td>\n",
+       "      <td>10:35</td>\n",
+       "      <td>20</td>\n",
+       "      <td>152</td>\n",
+       "      <td>148</td>\n",
+       "      <td>170</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>2009/2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Craig Adams</td>\n",
+       "      <td>32</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>RW</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>910</td>\n",
+       "      <td>11:06</td>\n",
+       "      <td>58</td>\n",
+       "      <td>193</td>\n",
+       "      <td>243</td>\n",
+       "      <td>311</td>\n",
+       "      <td>43.9</td>\n",
+       "      <td>2009/2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Maxim Afinogenov</td>\n",
+       "      <td>30</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>RW</td>\n",
+       "      <td>82</td>\n",
+       "      <td>24</td>\n",
+       "      <td>37</td>\n",
+       "      <td>61</td>\n",
+       "      <td>-17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>181</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>1426</td>\n",
+       "      <td>17:24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>2009/2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Andrew Alberts</td>\n",
+       "      <td>28</td>\n",
+       "      <td>TOT</td>\n",
+       "      <td>D</td>\n",
+       "      <td>76</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>50</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1169</td>\n",
+       "      <td>15:23</td>\n",
+       "      <td>88</td>\n",
+       "      <td>216</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2009/2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Andrew Alberts</td>\n",
+       "      <td>28</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>D</td>\n",
+       "      <td>62</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>935</td>\n",
+       "      <td>15:04</td>\n",
+       "      <td>67</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2009/2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10713</th>\n",
+       "      <td>905</td>\n",
+       "      <td>Jason Zucker</td>\n",
+       "      <td>27</td>\n",
+       "      <td>MIN</td>\n",
+       "      <td>LW</td>\n",
+       "      <td>81</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>42</td>\n",
+       "      <td>-9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>214</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>1383</td>\n",
+       "      <td>17:05</td>\n",
+       "      <td>38</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>2018/2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10714</th>\n",
+       "      <td>906</td>\n",
+       "      <td>Valentin Zykov</td>\n",
+       "      <td>23</td>\n",
+       "      <td>TOT</td>\n",
+       "      <td>LW</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>279</td>\n",
+       "      <td>9:57</td>\n",
+       "      <td>6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>2018/2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10715</th>\n",
+       "      <td>906</td>\n",
+       "      <td>Valentin Zykov</td>\n",
+       "      <td>23</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>LW</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>127</td>\n",
+       "      <td>9:45</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>2018/2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10716</th>\n",
+       "      <td>906</td>\n",
+       "      <td>Valentin Zykov</td>\n",
+       "      <td>23</td>\n",
+       "      <td>VEG</td>\n",
+       "      <td>LW</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>116</td>\n",
+       "      <td>11:37</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018/2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10717</th>\n",
+       "      <td>906</td>\n",
+       "      <td>Valentin Zykov</td>\n",
+       "      <td>23</td>\n",
+       "      <td>EDM</td>\n",
+       "      <td>LW</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36</td>\n",
+       "      <td>7:08</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018/2019</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10718 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      rank        player_name age team position games_played goals assists  \\\n",
+       "0        1  Justin Abdelkader  22  DET       LW           50     3       3   \n",
+       "1        2        Craig Adams  32  PIT       RW           82     0      10   \n",
+       "2        3   Maxim Afinogenov  30  ATL       RW           82    24      37   \n",
+       "3        4     Andrew Alberts  28  TOT        D           76     3       9   \n",
+       "4        4     Andrew Alberts  28  CAR        D           62     2       8   \n",
+       "...    ...                ...  ..  ...      ...          ...   ...     ...   \n",
+       "10713  905       Jason Zucker  27  MIN       LW           81    21      21   \n",
+       "10714  906     Valentin Zykov  23  TOT       LW           28     2       3   \n",
+       "10715  906     Valentin Zykov  23  CAR       LW           13     0       3   \n",
+       "10716  906     Valentin Zykov  23  VEG       LW           10     2       0   \n",
+       "10717  906     Valentin Zykov  23  EDM       LW            5     0       0   \n",
+       "\n",
+       "      points plus_minus  ... shots shooting_pct time_on_ice_min  \\\n",
+       "0          6        -11  ...    79          3.8             530   \n",
+       "1         10         -5  ...    84          0.0             910   \n",
+       "2         61        -17  ...   181         13.3            1426   \n",
+       "3         12          6  ...    50          6.0            1169   \n",
+       "4         10          7  ...    38          5.3             935   \n",
+       "...      ...        ...  ...   ...          ...             ...   \n",
+       "10713     42         -9  ...   214          9.8            1383   \n",
+       "10714      5         -5  ...    29          6.9             279   \n",
+       "10715      3         -1  ...    13          0.0             127   \n",
+       "10716      2         -3  ...    16         12.5             116   \n",
+       "10717      0         -1  ...     0          NaN              36   \n",
+       "\n",
+       "      average_time_on_ice blocks hits faceoff_wins faceoff_losses  \\\n",
+       "0                   10:35     20  152          148            170   \n",
+       "1                   11:06     58  193          243            311   \n",
+       "2                   17:24     21   32            1              2   \n",
+       "3                   15:23     88  216            0              1   \n",
+       "4                   15:04     67  172            0              0   \n",
+       "...                   ...    ...  ...          ...            ...   \n",
+       "10713               17:05     38   87            2             11   \n",
+       "10714                9:57      6   26            2              7   \n",
+       "10715                9:45      2    6            2              6   \n",
+       "10716               11:37      3   18            0              1   \n",
+       "10717                7:08      1    2            0              0   \n",
+       "\n",
+       "      faceoff_win_pct     season  \n",
+       "0                46.5  2009/2010  \n",
+       "1                43.9  2009/2010  \n",
+       "2                33.3  2009/2010  \n",
+       "3                 0.0  2009/2010  \n",
+       "4                 NaN  2009/2010  \n",
+       "...               ...        ...  \n",
+       "10713            15.4  2018/2019  \n",
+       "10714            22.2  2018/2019  \n",
+       "10715            25.0  2018/2019  \n",
+       "10716             0.0  2018/2019  \n",
+       "10717             NaN  2018/2019  \n",
+       "\n",
+       "[10718 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_df"
    ]
   },
   {
